@@ -11,8 +11,6 @@ import inspect
 import versions
 import os
 
-
-
 from PySide6.QtCore import QThread
 
 from .workers import BackgroundWorker, bgworker, asyncBgworker, Async_BackgroundWorker
